--- a/home/templates/contato_form.html
+++ b/home/templates/contato_form.html
@@ -14,6 +14,7 @@
                         <button class="btn btn-success" type="submit">Salvar</button>
                     </form>
                 </article>
+                <a class="btn btn-secondary mt-3 offset-md-7" href="{% url 'cliente_list' %}">Voltar</a>
             </section>
         </main>
         <footer>
