--- a/pedido/templates/orcamento_form.html
+++ b/pedido/templates/orcamento_form.html
@@ -7,14 +7,20 @@
         <main class="mt-5">
             <section class="container mb-5">
                 <article class="rounded border shadow pt-4 pr-4 pl-4 pb-4 offset-md-3 col-md-5">
-                    <h3> Cliente </h3>
+                    <h3> Novo Orcamento </h3>
                     <form class="" action="" method="POST">
                         {% csrf_token %}
                         {{ form|bootstrap }}
                         <button class="btn btn-success" type="submit">Salvar</button>
                     </form>
                 </article>
-                <a class="btn btn-secondary mt-3 offset-md-7" href="{% url 'cliente_list' %}">Voltar</a>
+                <article>
+                    <div class="mt-3 offset-sm-7">
+                        <a class="btn btn-secondary" href="{% url 'orcamento' %}">
+                            Voltar
+                        </a>
+                    </div>
+                </article>
             </section>
         </main>
         <footer>
