--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,8 @@
                               <li class="nav-item">
                                 <a class="nav-link" href="#">Agenda</a>
                               </li>
-                              <li class="nav-item">
-                                <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                   Cadastros
                                 </a>
                                   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
