--- a/templates/index.html
+++ b/templates/index.html
@@ -40,10 +40,7 @@
               </div>
             </nav>
         </header>
-        <main class="">
-
-
-            <div id="carouselExampleFade" class="carousel slide carousel-fade rounded shadow" data-ride="carousel">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade rounded shadow" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img class="d-block w-100" src="{% static '/media/star.jpg' %}" alt="First slide">
@@ -64,6 +61,22 @@
                 <span class="sr-only">Next</span>
               </a>
             </div>
+        <main class="container">
+            <section>
+                <h1 class="text-center">CONECTA</h1>
+                <article>
+                    <p>
+                        A Conecta Soluções Associativas foi criada, com base nos quase 40 anos de experiência e liderança
+                        da Abrapp no entendimento das necessidades das entidades fechadas de previdência complementar e na
+                        excelência reconhecida na entrega de projetos e realização de iniciativas.<br>
+                    </p>
+                    <p>
+                        Somos uma empresa jovem e comprometida, com foco na geração de facilidades e desoneração,
+                        interconectando interesses comuns das EFPC e do Sistema, numa proposta de criação de valor e racionalização de custos.
+                    </p>
+                </article>
+
+            </section>
         </main>
         <footer>
 
