--- a/home/templates/cliente_list.html
+++ b/home/templates/cliente_list.html
@@ -4,8 +4,22 @@
 {% block main %}
 
     <main class="container">
+
         <section class="mt-4">
-            <h3>Cliente</h3>
+            <div class="row">
+                <div class="col-md-8">
+                    <h3>Cliente</h3>
+                </div>
+                <div class="col-md-4">
+                    <form class="form-inline">
+                      <div class="form-group mx-sm-3 mb-2">
+                        <label for="inputPassword2" class="sr-only">Password</label>
+                        <input type="text" class="form-control" id="inputPassword2" placeholder="Cliente">
+                      </div>
+                      <button type="submit" class="btn btn-primary mb-2">Pesquisar</button>
+                    </form>
+                </div>
+            </div>
             <article class="rounded border shadow pt-4 pr-4 pl-4 table-responsive-lg">
                 <table class="table table-hover table-lg">
                     <thead>
