--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,10 @@
         <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
         <link rel="stylesheet" href="{% static 'css/auto.css' %}">
 
+        <link rel="stylesheet" href="{% static 'css/agenda-default.css' %}">
+        <link rel="stylesheet" href="{% static 'css/fullcalendar.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/fullcalendar.print.min.css' %}"  media='print' />
+
     </head>
     <body>
         <header>
@@ -29,7 +33,7 @@
                                 <a class="nav-link" href="{% url 'home' %}">Menu<span class="sr-only">(current)</span></a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">Agenda</a>
+                                <a class="nav-link" href="{% url 'agenda' %}">Agenda</a>
                               </li>
                               <li class="nav-item">
                                 <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -54,8 +58,10 @@
                           </ul>
                           <form class="form-inline">
                               {% if user.is_authenticated %}
-                                {{ user.username }}
-                                <a class="my-2 my-lg-0" href="/logout"><i class="fas fa-sign-out-alt"> Sair</i></a>
+                                <div class="pr-2">
+                                    {{ user.username }}
+                                </div>
+                                <a class="my-2 my-lg-0" href="/logout"><i class="fas fa-sign-out-alt">Sair</i></a>
                               {% endif %}
                           </form>
                       </div>
@@ -66,6 +72,10 @@
         {% block main %}
 
         {% endblock %}
+
+        <script src="{% static 'js/moment.min.js' %}"></script>
+        <script src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="{% static 'js/fullcalendar.min.js' %}"></script>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
