--- a/templates/index.html
+++ b/templates/index.html
@@ -62,8 +62,10 @@
               </a>
             </div>
         <main class="container">
-            <section>
-                <h1 class="text-center">CONECTA</h1>
+            <section class="mt-5">
+                <div class="text-center">
+                    <h1>CONECTA</h1>
+                </div>
                 <article>
                     <p>
                         A Conecta Soluções Associativas foi criada, com base nos quase 40 anos de experiência e liderança
@@ -75,6 +77,54 @@
                         interconectando interesses comuns das EFPC e do Sistema, numa proposta de criação de valor e racionalização de custos.
                     </p>
                 </article>
+            </section>
+            <hr>
+            <section>
+                <div class="row text-center">
+                    <div class="col-md-4 mb-3">
+                        <div class="card ">
+                            <div class="h-100 card-body ">
+                                <h5>
+                                    MISSÃO
+                                </h5>
+                                <p>
+                                    Conectar interesses comuns, com excelência e foco na geração de facilidades, desoneração e criação de valor agregado.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <div class="card w-100">
+                            <div class="card-body">
+                                <h5>
+                                    VISÃO
+                                </h5>
+                                <p>
+                                   Ser percebida como empresa inovadora e empreendedora que proporciona facilidades, otimização de recursos e experiências
+                                    de valor aos seus clientes e fornecedores, de forma colaborativa.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <div class="card w-100">
+                            <div class="card-body">
+                                <h5>
+                                    VALORES
+                                </h5>
+                                <p>
+                                    Ética, Qualidade, Transparência, Agilidade, Profissionalismo e Responsabilidade Social e Ambiental.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <h1>
+                    SOLUÇÕES
+                </h1>
+                <hr>
 
             </section>
         </main>
