--- a/home/templates/cliente_list.html
+++ b/home/templates/cliente_list.html
@@ -13,8 +13,8 @@
                 <div class="col-md-4">
                     <form class="form-inline">
                       <div class="form-group mx-sm-3 mb-2">
-                        <label for="inputPassword2" class="sr-only">Password</label>
-                        <input type="text" class="form-control" id="inputPassword2" placeholder="Cliente">
+
+                        <input type="text" class="form-control" name="pesquisa" id="inputPassword2" placeholder="Cliente">
                       </div>
                       <button type="submit" class="btn btn-primary mb-2">Pesquisar</button>
                     </form>
