--- a/agenda/templates/agenda.html
+++ b/agenda/templates/agenda.html
@@ -5,7 +5,7 @@
 
 
     <div class="row m-3">
-        <div class="col-lg-12">
+        <div class="offset-md-2 col-md-8 rounded border shadow table-responsive-lg" style="margin-top: 40px">
             <div class="box">
                 <header>
                     <h5></h5>
