--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -7,7 +7,7 @@
     <section class="container">
         <div class="row">
             <div class="col-md-6 rounded border shadow pt-4 pr-4 pl-4 table-responsive-lg" style="margin-top: 40px">
-                <div class="d-block p-md-5 block">
+                <div class="p-md-5">
                     <header>
                         <h5> Agenda </h5>
                     </header>
