Alterando de FBV para CBV ListView

--- a/home/templates/clientes/contato_list.html
+++ b/home/templates/clientes/contato_list.html
@@ -32,7 +32,7 @@
                     </thead>
                     <tbody>
 
-                    {% for contato in contato %}
+                    {% for contato in object_list %}
                         <tr>
                             <td>
                                 {{ contato.nome }}
