--- a/home/templates/clientes/sala_list.html
+++ b/home/templates/clientes/sala_list.html
@@ -4,37 +4,23 @@
 {% block main %}
 
     <main class="container">
-
         <section class="mt-4">
-            <div class="row">
-                <div class="col-md-8">
-                    <h3>Cliente</h3>
-                </div>
-                <div class="col-md-4">
-                    <form class="form-inline">
-                      <div class="form-group mx-sm-3 mb-2">
-
-                        <input type="text" class="form-control" name="pesquisa" id="inputPassword2" placeholder="Cliente">
-                      </div>
-                      <button type="submit" class="btn btn-primary mb-2">Pesquisar</button>
-                    </form>
-                </div>
-            </div>
+            <h3>Salas</h3>
             <article class="rounded border shadow pt-4 pr-4 pl-4 table-responsive-lg">
-                <table class="table table-hover table-lg">
+                <table class="table table-hover table-fa-lg">
                     <thead>
                         <tr>
                             <th>
                                 Nome
                             </th>
                             <th>
-                                Email
+                                Capacidade
                             </th>
                             <th>
-                                Numero
+                                Status
                             </th>
                             <th>
-                                Contato
+                                Tipo
                             </th>
                             <th>
                                 Ações
@@ -43,29 +29,29 @@
                     </thead>
                     <tbody>
 
-                    {% for cliente in cliente %}
+                    {% for sala in object_list %}
                         <tr>
                             <td>
-                                {{ cliente.nome }}
+                                {{ sala.nome }}
                             </td>
                             <td>
-                                {{ cliente.email }}
+                                {{ sala.capacidade }}
                             </td>
                             <td>
-                                {{ cliente.numero }}
+                                {{ sala.status }}
                             </td>
                             <td>
-                                {{ cliente.contato }}
+                                {{ sala.tipo }}
                             </td>
                             <td>
                                 <a>
                                     <i class="fas fa-search"></i>
                                 </a>
-                                <a href="{% url 'cliente_altera' cliente.id %}">
-                                    <i class="far fa-edit"></i>
+                                <a href="{% url 'sala_altera' sala.id %}">
+                                    <i class="far fa-edit fa-lg"></i>
                                 </a>
-                                <a href="{% url 'cliente_deleta' cliente.id %}">
-                                    <i class=" far fa-trash-alt" style="color: #f06595;"></i>
+                                <a href="{% url 'sala_deleta' sala.id %}">
+                                    <i class=" far fa-trash-alt fa-lg" style="color: #f06595;"></i>
                                 </a>
                             </td>
                         </tr>
@@ -74,8 +60,8 @@
                     </tbody>
                 </table>
             </article>
-            <div class="mt-4 offset-md-11 ">
-                <a class="btn btn-sm btn-success shadow" href="{% url 'cliente_novo' %}">Novo</a>
+            <div class="mt-4 offset-sm-11">
+                <a class="btn btn-sm btn-success shadow" href="{% url 'sala_novo' %}">Novo</a>
             </div>
         </section>
     </main>
