Agenda com os Eventos aparecendo

--- a/agenda/templates/agenda.html
+++ b/agenda/templates/agenda.html
@@ -21,18 +21,17 @@
                     <h5></h5>
                 </header>
                 <div id="calendar_content" class="body">
-                    <div class="calendar-wrapper rounded table-responsive" >
+                    <div class="calendar-wrapper rounded" >
+                        <div id="divCal" class="rounded"></div>
+                        <div class="row p-2">
+                            <button id="btnPrevv" class="shadow-lg offset-1 col-3 btn btn-light" type="button">Prev</button>
+                            <button id="btnNextt" class="shadow-lg offset-4 col-3 btn btn-success" type="button">Próx</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-	
-	<!-- talvez possa excluir -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-	<!-- talvez possa excluir -->
 	
 	<!-- Modal -->
         
@@ -77,5 +76,4 @@
         </div>
       </div>
     </div>
-
 {% endblock %}
